--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -15,5 +15,6 @@ Error-Target-Not-Found: "§7[§e!§7] Il giocatore specificato non è online."
 Error-Invalid-Number: "§7[§e!§7] L' importo specificato non è un numero valido."
 Not-Enough-Money: "§7[§e!§7] Non hai abbastanza soldi per completare l'operazione."
 Bounty-Set: "§7[§e!§7] Taglia impostata correttamente a {player}."
-Bounty-Broadcast: "§e§lᴛᴀɢʟɪᴇ §7Una taglia dal valore di §2{money} §7è stata impostata su  + {player}"
+Bounty-Broadcast: "§e§lᴛᴀɢʟɪᴇ §7Una taglia dal valore di §2{money} §7è stata impostata su {player}"
 Cant-Bounty-Yourself: "§7[§e!§7] Non puoi mettere una taglia su te stesso!"
+Bounty-Rewarded: "§e§lᴛᴀɢʟɪᴇ §7La taglia su {player} è stata riscattata!"
