--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,12 +9,14 @@ Database:
 ######################### MESSAGES #########################
 Permission-Name: "RoyalCore.Taglia"
 
-Error-Usage: "§7[§e!§7] Utilizzo errato del comando. Usa: /taglia <giocatore> <importo>"
-No-Permission: "§7[§e!§7] Non hai il permesso per eseguire questo comando."
-Error-Target-Not-Found: "§7[§e!§7] Il giocatore specificato non è online."
-Error-Invalid-Number: "§7[§e!§7] L' importo specificato non è un numero valido."
-Not-Enough-Money: "§7[§e!§7] Non hai abbastanza soldi per completare l'operazione."
-Bounty-Set: "§7[§e!§7] Taglia impostata correttamente a {player}."
-Bounty-Broadcast: "§e§lᴛᴀɢʟɪᴇ §7Una taglia dal valore di §2{money} §7è stata impostata su {player}"
-Cant-Bounty-Yourself: "§7[§e!§7] Non puoi mettere una taglia su te stesso!"
+Error-Usage: "§e§lᴛᴀɢʟɪᴇ Utilizzo errato del comando. Usa: /taglia <giocatore> <importo>"
+No-Permission: "§e§lᴛᴀɢʟɪᴇ Non hai il permesso per eseguire questo comando."
+Error-Target-Not-Found: "§e§lᴛᴀɢʟɪᴇ Il giocatore specificato non è online."
+Error-Invalid-Number: "§e§lᴛᴀɢʟɪᴇ L' importo specificato non è un numero valido."
+Not-Enough-Money: "§e§lᴛᴀɢʟɪᴇ Non hai abbastanza soldi per completare l'operazione."
+Bounty-Set: "§e§lᴛᴀɢʟɪᴇ §7Taglia impostata correttamente a {player}."
+Bounty-Broadcast: "§e§lᴛᴀɢʟɪᴇ §7Una taglia dal valore di §2{money} §7è stata impostata su {player}."
+Cant-Bounty-Yourself: "§e§lᴛᴀɢʟɪᴇ Non puoi mettere una taglia su te stesso!"
 Bounty-Rewarded: "§e§lᴛᴀɢʟɪᴇ §7La taglia su {player} è stata riscattata!"
+Already-Has-Bounty: "§e§lᴛᴀɢʟɪᴇ §7Il giocatore ha già una taglia."
+Bounty-Updated-Broadcast: "§e§lᴛᴀɢʟɪᴇ §7Una taglia dal valore di §2{money} §7è stata impostata su {player}. Valore totale {allmoney}"
